[workspace]
resolver = "3"
members = [
    "proto",
    "chronicled",
    "chronicles/libchronicle",
    "chronicle-catalog",
    "chronicles/cli",
]

[workspace.dependencies]
chronicle-proto = { path = "./proto" }

clap = { version = "4.5.45", features = ["derive"] }
async-trait = "^0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0.12"
tonic = "0.13"
tonic-build = "0.13.1"
tonic-health = "0.13"
prost = "0.13"
prost-types = "0.14"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.16" }
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh32", "const_xxh32"] }
num_cpus = "1.16"
rocksdb = { version = "0.24.0" }
crossbeam-skiplist = "0.1"
boxcar = "0.2"
futures-util = "0.3"
async-stream = "0.3"
opentelemetry = "^0.29"
opentelemetry_sdk = { version = "^0.29", features = ["spec_unstable_metrics_views"] }
opentelemetry-prometheus = "^0.29"
prometheus = "0.14"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tokio-stream = "0.1"
serde_json = "1.0"
liboxia = "0.0.2"
axum = "0.8"
memmap2 = "0.9"
libc = "0.2"
aws-sdk-s3 = "1.82.0"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
bytes = "1.10"
lru = "0.14"
sysinfo = { version = "0.34", default-features = false, features = ["system"] }
