[package]
name = "chronicle-unit"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
xxhash-rust = { workspace = true }
crossbeam-skiplist = { workspace = true }
boxcar = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
memmap2 = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
