[package]
name = "chronicle-sink"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-catalog = { path = "../../chronicle-catalog" }
libchronicle = { path = "../../chronicles/libchronicle" }
libxunit = { path = "../../chronicles/libxunit" }
thiserror = { workspace = true }
tracing = { workspace = true }
