[package]
name = "chronicle-cli"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
libchronicle = { path = "../libchronicle" }
chronicle-unit = { path = "../../chronicled" }
chronicle-catalog = { path = "../../chronicle-catalog" }
tonic = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
libc = "0.2"
