[package]
name = "chronicle-cli"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
libchronicle = { path = "../libchronicle" }
libxunit = { path = "../libxunit" }
chronicle-unit = { path = "../../chronicled/unit" }
chronicle-sink = { path = "../../chronicled/sink" }
chronicle-xunit = { path = "../../chronicled/xunit" }
chronicle-lens = { path = "../../chronicled/lens" }
catalog = { path = "../../catalog" }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
libc = "0.2"
